# aria

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  add_license_marker.sh  aria  b  ci_tests.sh  package.sh  run_doc_script_tests.sh  t  tree_check.sh
aria-bin/: Cargo.toml  test_assert.aria  test_uncaught_exception.aria
aria-bin/src/: error_reporting.rs  file_eval.rs  main.rs  repl_eval.rs  repl_preamble.aria  test.rs
aria-bin/src/error_reporting_test/: expected.txt  main.aria  util.aria
bench-bin/: build.sh
compiler-lib/: Cargo.toml
compiler-lib/src/: bc_reader.rs  bc_writer.rs  constant_value.rs  func_builder.rs  lib.rs  line_table.rs  module.rs  scope.rs
compiler-lib/src/builder/: block.rs  compiler_opcodes.rs  func.rs  mod.rs
compiler-lib/src/do_compile/: mod.rs  postfix.rs
compiler-lib/src/do_compile/nodes/: add_operation.rs  assert_statement.rs  assign_statement.rs  break_statement.rs  code_block.rs  comp_operation.rs  continue_statement.rs  enum_case_decl.rs  enum_decl.rs  expression.rs  expression_list.rs  expression_statement.rs  extension_decl.rs  float_literal.rs  for_statement.rs  function_body.rs  function_decl.rs  guard_block.rs  identifier.rs  if_cond_case.rs  if_cond_expr.rs  if_statement.rs  import_from_statement.rs  import_statement.rs  int_literal.rs  lambda.rs  list_literal.rs  logical_operation.rs  match_pattern.rs  match_pattern_comp.rs  match_pattern_enum_case.rs  match_pattern_rel.rs  match_pattern_relational.rs  match_statement.rs  method_decl.rs  mixin_decl.rs  mod.rs  mul_operation.rs  paren_expression.rs  parsed_module.rs  (+16 more)
compiler-lib/src/dump/: mod.rs  opcodes.rs
docs/: CONTRIBUTING.md  Gemfile  ROADMAP.md  _config.yml  benchmarking.md  index.html  index.markdown  manual.md  release_policy.md  stdlib.md  style_guide.md
examples/: 99bottles.aria  add_license_marker.aria  advent_of_code_2024_day1.aria  advent_of_code_2024_day2.aria  advent_of_code_2024_day3.aria  command_line_args.aria  currency.aria  dir.aria  fibonacci.aria  fibonacci_memoized.aria  fizzbuzz.aria  github_user.aria  hello.aria  parser.aria  pi.aria  string_escapes.aria
lib-test/: README.md  test_things.aria
lsp/: Cargo.toml
network-lib/: Cargo.toml
opcodes-lib/: Cargo.toml
parser-lib/: Cargo.toml
test-bin/: Cargo.toml
test-bin/src/: main.rs
tests/: and.aria  (+471 more)
vm-lib/: Cargo.toml
vm-lib/benches/: control_flow.rs
vm-lib/src/: arity.rs  console.rs  frame.rs  lib.rs  mixin_includer.rs  runtime_module.rs  sigil_registry.rs  stack.rs  test.rs  vm.rs
vm-lib/src/builtins/: alloc.rs  arity.rs  boolean.rs  cmdline_args.rs  exit.rs  file_io.rs  float.rs  getenv.rs  hasattr.rs  identity.rs  integer.rs  list.rs  listattrs.rs  maybe.aria  mod.rs  native_iterator.rs  now.rs  path.rs  prettyprint.rs  print.rs  println.rs  readattr.rs  readln.rs  register_sigil.rs  regular_expression.rs  result.aria  runtime_error.aria  setenv.rs  sleep.rs  string.rs  system.rs  test_exit.aria  timezone.rs  typ.rs  typeof_builtin.rs  unimplemented.aria  unit.aria  writeattr.rs
vm-lib/src/error/: backtrace.rs  dylib_load.rs  exception.rs  mod.rs  vm_error.rs
vm-lib/src/opcodes/: mod.rs  prettyprint.rs
vm-lib/src/runtime_value/: boolean.rs  bound_function.rs  builtin_type.rs  builtin_value.rs  enum_case.rs  enumeration.rs  float.rs  function.rs  integer.rs  isa.rs  kind.rs  list.rs  mixin.rs  mod.rs  object.rs  opaque.rs  runtime_code_object.rs  string.rs  structure.rs
(+232 files in other folders)
