[package]
name = "aria-bin"
version = "0.9.20250918"
edition = "2024"

[dependencies]
opcodes-lib = { path = "../opcodes-lib" }
parser-lib = { path = "../parser-lib" }
compiler-lib = { path = "../compiler-lib" }
vm-lib = { path = "../vm-lib" }
clap = { version = "4.5.47", features = ["derive"] }
ariadne = { version = "0.5.0", features = ["auto-color"] }
reedline = "0.42.0"

[[bin]]
name = "aria"
path = "src/main.rs"
