[package]
name = "compiler-lib"
version = "0.9.20251013"
edition = "2024"

[lib]
name = "aria_compiler"
path = "src/lib.rs"

[dependencies]
pest = "2.8.3"
pest_derive = "2.8.3"
opcodes-lib = { path = "../opcodes-lib" }
parser-lib = { path = "../parser-lib" }
enum-as-inner = "0.6.1"
thiserror = "2.0.17"
lazy_static = "1.5.0"
