[package]
name = "test-bin"
version = "0.9.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.5.0", features = ["auto-color"] }
clap = { version = "4.5.43", features = ["derive"] }
glob = "0.3.1"
rayon = "1.10.0"
parser-lib = { path = "../parser-lib" }
compiler-lib = { path = "../compiler-lib" }
vm-lib = { path = "../vm-lib" }

[[bin]]
name = "test"
path = "src/main.rs"
