[package]
name = "test-bin"
version = "0.9.20251118"
edition = "2024"

[dependencies]
ariadne = { git = "https://github.com/zesterer/ariadne.git", rev="b60b500" }
clap = { version = "4.5.51", features = ["derive"] }
glob = "0.3.3"
rayon = "1.11.0"
parser-lib = { path = "../parser-lib" }
compiler-lib = { path = "../compiler-lib" }
vm-lib = { path = "../vm-lib" }
regex = "1.12.2"
once_cell = "1.21.3"

[[bin]]
name = "test"
path = "src/main.rs"
