[package]
name = "vm-lib"
version = "0.9.0"
edition = "2024"

[lib]
name = "haxby_vm"
path = "src/lib.rs"

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
parser-lib = { path = "../parser-lib" }
compiler-lib = { path = "../compiler-lib" }
opcodes-lib = { path = "../opcodes-lib" }
enum-as-inner = "0.6.1"
thiserror = "2.0.15"
libloading = "0.8.8"
libc = "0.2.174"
