[package]
name = "vm-lib"
version = "0.9.20251013"
edition = "2024"

[lib]
name = "haxby_vm"
path = "src/lib.rs"

[dependencies]
pest = "2.8.3"
pest_derive = "2.8.3"
parser-lib = { path = "../parser-lib" }
compiler-lib = { path = "../compiler-lib" }
opcodes-lib = { path = "../opcodes-lib" }
enum-as-inner = "0.6.1"
thiserror = "2.0.17"
libloading = "0.9.0"
libc = "0.2.177"
rustc_data_structures = "0.1.2"

[dev-dependencies]
criterion = { version = "0.7.0" }

[[bench]]
name = "control_flow"
harness = false